k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolistjules
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todolistjules
  template:
    metadata:
      labels:
        app: todolistjules
    spec:
      imagePullSecrets:
        - name: acr-pull
      containers:
        - name: todolistjules
          image: m324demoacrqba.azurecr.io/todolistjules:b0711d0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: todolistjules-backend-service
spec:
  type: ClusterIP
  selector:
    app: todolistjules
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
