k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todolistjules-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: todolistjules.89.145.167.242.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todolistjules-backend-service
                port:
                  number: 3000
